# Project5

./: .env.sample  .gitattributes  .gitignore  Dockerfile  Dockerfile.nginx  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  constraints.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.y_ml  ci.yml  ci_docker.yml
config/: settings.py  urls.py
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_change_moderator_py.html  z_1df033120bbcc412_create_groups_py.html  z_1df033120bbcc412_create_payment_py.html  z_1df033120bbcc412_create_users_py.html  z_1df033120bbcc412_csu_py.html  z_1df033120bbcc412_dau_py.html  z_1df033120bbcc412_dcp_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_300a7f43993f905c_0001_initial_py.html  z_300a7f43993f905c_0002_alter_course_options_alter_lesson_options_and_more_py.html  z_300a7f43993f905c_0003_subscriptions_py.html  z_300a7f43993f905c___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_e7c45762ecaa8ffb___init___py.html  z_e7c45762ecaa8ffb_admin_py.html  z_e7c45762ecaa8ffb_apps_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginators_py.html  z_e7c45762ecaa8ffb_serializers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  (+7 more)
lms/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0003_subscriptions.py  0004_course_price_сoursepayment.py  0005_alter_subscriptions_user.py  0006_alter_coursepayment_status.py  0007_alter_coursepayment_link_and_more.py
nginx/: Dockerfile  nginx.conf
project5-clean/: pyproject.toml
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: change_moderator.py  create_groups.py  create_payment.py  create_users.py  csu.py  dcp.py
users/migrations/: 0001_initial.py  0002_userpayment.py  0003_alter_userpayment_options_and_more.py  0004_alter_userpayment_options.py
