[tool.poetry]
name = "project5"
version = "0.1.0"
description = ""
authors = ["Kuprin Aleksandr <freeman8901@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.33.1"
python-dotenv = "^1.2.2"
icecream = "^2.2.0"
pandas = "^3.0.2"
openpyxl = "^3.1.5"
psycopg = {extras = ["binary"], version = "^3.3.4"}
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
flake8 = "^7.3.0"
black = "^26.3.1"
isort = "^8.0.1"
mypy = "^1.20.2"
ruff = "^0.15.12"
pyupgrade = "^3.21.2"
pandas-stubs = "^3.0.0.260204"
django = "^6.0.4"
djangorestframework = "^3.17.1"
pillow = "^12.2.0"
djangorestframework-stubs = "^3.16.9"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
ipython = "^9.13.0"
coverage = "^7.13.5"
drf-spectacular = "^0.29.0"
drf-yasg = "^1.21.15"
django-cors-headers = "^4.9.0"
stripe = "^15.1.0"
redis = "^7.4.0"
celery = "^5.6.3"
celery-types = "^0.26.0"
django-celery-beat = "^2.9.0"
eventlet = "^0.41.0"
amqp = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
warn_unreachable = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
]

# Same as Black.
line-length = 119
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
